--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,1 +1,33 @@
-<p>register works!</p>
+<div class="register-container">
+    <div class="register-form">
+    <div class="row justify-content-start">
+      <div class="col-4">
+        <label>userId:
+          <input class="userId" matInput [formControl]='userId'>
+        </label>
+      </div>
+    </div>
+    <div class="row justify-content-start">
+        <div class="col-4">
+          <label>userEmail:
+            <input class="userId" matInput [formControl]='userEmail'>
+          </label>
+        </div>
+      </div>
+    <div class="row justify-content-start">
+      <div class="col-4">
+        <label>userPassword:
+          <input class="userPassword" matInput type = 'password' [formControl]='userPassword'>
+        </label>
+      </div>
+    </div>
+    <div class="row justify-content-center">
+      <div class="col-4">
+        <button class="btn btn-primary" (click)="registerSubmit()">Submit</button>
+      </div>
+    </div>
+  </div>
+  </div>
+  <div style="text-align:center">
+    <label class="error-message">{{ submitMessage }}</label>
+  </div>
