--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,72 +1,3 @@
-<div *ngIf="isFavouriteExists">
-  <h2>Favourites</h2>
-  <mat-grid-list cols="4" rowHeight="4:5">
-    <mat-grid-tile *ngFor="let fav of favs" (click)="removeFromFavourites(fav)">
-      <mat-card class="example-card">
-        <mat-card-header>
-          <mat-card-title>{{ fav.city }}</mat-card-title>
-        </mat-card-header>
-        <mat-card-content>
-          <div>
-            <p>AQI: {{ fav.aqi }}</p>
-            <p>Carbon Monoxide: {{ fav.pollutants.co }}</p>
-            <p>Sulphur Dioxide: {{ fav.pollutants.so2 }}</p>
-            <p>Nitrogen Dioxide: {{ fav.pollutants.no2 }}</p>
-            <p>Ozone: {{ fav.pollutants.o3 }}</p>
-            <p>PM2.5: {{ fav.pollutants.pm2_5 }}</p>
-            <p>PM10: {{ fav.pollutants.pm10 }}</p>
-          </div>
-        </mat-card-content>
-        <mat-card-actions>
-          <button mat-mini-fab color="primary">
-            <mat-icon>delete</mat-icon>
-          </button>
-        </mat-card-actions>
-      </mat-card>
-    </mat-grid-tile>
-  </mat-grid-list>
-</div>
+<app-search></app-search>
 
-<!-- <mat-grid-list cols="3" rowHeight="2:1">
-  <mat-grid-tile>1</mat-grid-tile>
-  <mat-grid-tile>2</mat-grid-tile>
-  <mat-grid-tile>3</mat-grid-tile>
-  <mat-grid-tile>4</mat-grid-tile>
-</mat-grid-list> -->
-
-<h1>Get AQI for your city</h1>
-
-<mat-form-field appearance="fill">
-  <mat-label>Select Country</mat-label>
-  <mat-select
-    [(ngModel)]="selectedCountry"
-    name="selectedCountry"
-    (selectionChange)="getStates()"
-  >
-    <mat-option *ngFor="let country of countries" [value]="country">
-      {{ country }}
-    </mat-option>
-  </mat-select>
-</mat-form-field>
-
-
-
-<mat-form-field appearance="fill">
-  <mat-label>Select State</mat-label>
-  <mat-select [(ngModel)]="selectedState" name="selectedState" (selectionChange)="getCities()">
-    <mat-option *ngFor="let state of states" [value]="state">
-      {{ state }}
-    </mat-option>
-  </mat-select>
-</mat-form-field>
-
-<mat-form-field appearance="fill">
-  <mat-label>Select City</mat-label>
-  <mat-select [(ngModel)]="selectedCity" name="selectedCity" (selectionChange)="getCityAqi()">
-    <mat-option *ngFor="let city of cities" [value]="city">
-      {{ city }}
-    </mat-option>
-  </mat-select>
-</mat-form-field>
-
-<h2 *ngIf="aqi">AQI: {{aqi}}</h2>
+<app-favourites></app-favourites>
