--- a/src/app/aqicard/aqicard.component.css
+++ b/src/app/aqicard/aqicard.component.css
@@ -1,12 +1,7 @@
 .example-card {
-  width: 600px;
-  position: absolute;
-  right: 100px;
-  top: 220px;
-  padding: 0 0 0 0;
+  width: 500px;
+  align-self: center;
 }
-
-
 
 .mat-card-title {
   padding-top: 10px;
@@ -21,11 +16,9 @@ table {
   width: 100%;
 }
 
-.aqicard {
-  display: inline;
-}
-
 .elem {
   position: absolute;
   right: 20px;
 }
+
+
