--- a/src/app/aqicard/aqicard.component.html
+++ b/src/app/aqicard/aqicard.component.html
@@ -1,33 +1,18 @@
-<div class="aqicard">
-  <mat-card class="example-card">
-    <mat-card-header [style.background-color]="headerColor()">
-      <div class="aqi-color"></div>
-      <mat-card-title>{{ aqi }}</mat-card-title>
-      <mat-card-subtitle>{{ city }}</mat-card-subtitle>
-      <h2 class="warning">{{ status }}</h2>
-    </mat-card-header>
+<mat-card class="example-card">
+  <mat-card-header [style.background-color]="headerColor()">
+    <div class="aqi-color"></div>
+    <mat-card-title>{{ aqi }}</mat-card-title>
+    <mat-card-subtitle>{{ city }}</mat-card-subtitle>
+    <h2 class="warning">{{ status }}</h2>
+  </mat-card-header>
 
-    <mat-card-content>
-      <!-- <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-        <ng-container matColumnDef="name">
-          <th mat-header-cell *matHeaderCellDef>Pollutant</th>
-          <td mat-cell *matCellDef="let element">{{ element.name }}</td>
-        </ng-container>
-
-        <ng-container matColumnDef="value">
-          <th mat-header-cell *matHeaderCellDef>Concentration</th>
-          <td mat-cell *matCellDef="let element">{{ element.value }}</td>
-        </ng-container>
-
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-      </table> -->
-      <mat-list *ngFor="let data of dataSource">
-        <mat-list-item>
-          {{ data.name | uppercase }} <span class="elem">{{ data.value }}  μg/m<sup>3</sup></span>
-        </mat-list-item>
-        <mat-divider></mat-divider>
-      </mat-list>
-    </mat-card-content>
-  </mat-card>
-</div>
+  <mat-card-content>
+    <mat-list *ngFor="let data of dataSource">
+      <mat-divider></mat-divider>
+      <mat-list-item>
+        {{ data.name | uppercase }}
+        <span class="elem">{{ data.value }} μg/m<sup>3</sup></span>
+      </mat-list-item> 
+    </mat-list>
+  </mat-card-content>
+</mat-card>
