--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,11 @@
-<app-header></app-header>
-<app-register></app-register>
-<app-login></app-login>
-<app-dashboard></app-dashboard>
+<mat-sidenav-container>
+    <mat-sidenav #sidenav mode="navigation">
+        <app-sidenav-list (sidenavClose)="sidenav.close()"></app-sidenav-list>
+    </mat-sidenav>
+    <mat-sidenav-content>
+        <app-header (sidenavToggle)="sidenav.toggle()"></app-header>
+        <main>
+            <router-outlet></router-outlet>
+        </main> 
+    </mat-sidenav-content>
+</mat-sidenav-container>
