--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,4 +1,4 @@
-.login-container
+/* .login-container
 {
     display: flex;
     flex-direction: column;
@@ -9,4 +9,31 @@
 {   
    margin: 10% auto;
    width: 20vw;
+} */
+.container{
+  margin: auto;
+  width: 50%;
+  padding: 10px;
 }
+.fill-remaining-space {
+    flex: 1 1 auto;
+  }
+  
+  .container {
+    padding: 10px;
+  }
+  
+  .form {
+    min-width: 150px;
+    max-width: 500px;
+    width: 100%;
+  }
+  
+  .form-element {
+    padding: 5px 0px 25px 2px;
+    width: 100%;
+  }
+  
+  .button {
+    width: 100%;
+  }
