--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,9 +1,9 @@
-<div class="login-container">
+<!-- <div class="login-container">
     <div class="login-form">
     <div class="row justify-content-start">
       <div class="col-4">
-        <label>userId:
-          <input class="userId" matInput [formControl]='userId'>
+        <label>userEmail:
+          <input class="userEmail" matInput [formControl]='userEmail'>
         </label>
       </div>
     </div>
@@ -23,4 +23,24 @@
   </div>
   <div style="text-align:center">
     <label class="error-message">{{ submitMessage }}</label>
-  </div>
+  </div> -->
+  
+  <div [formGroup]="formGroup">
+    <div class="container">
+      <mat-form-field class="form-element">
+        <input matInput placeholder="Email Address" formControlName="userEmail">
+      </mat-form-field>
+    
+      <mat-form-field class="form-element">
+        <input matInput placeholder="Password" type="password" formControlName="userPassword">
+      </mat-form-field>
+
+      <div class="form-element">
+        <button mat-raised-button color="primary" type="submit" class="button"(click)="loginSubmit()">Login</button>
+      </div>
+
+      <div style="text-align:center">
+        <label class="error-message">{{ submitMessage }}</label>
+      </div>
+    </div>
+    </div>
