--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
+html, body { height: 100%; margin:0 }
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
  body {
    margin: 0;
