--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-header></app-header>
 <!-- <app-register></app-register>
 <app-login></app-login> -->
-<app-dashboard></app-dashboard>
+<!-- <app-dashboard></app-dashboard> -->
+<app-subscription [username]="username"></app-subscription>
