--- a/src/app/search/search.component.css
+++ b/src/app/search/search.component.css
@@ -1,6 +1,6 @@
 .example-card {
   width: 400px;
-  height: 200px;
+  height: 250px;
 }
 
 .grid-container1 {
@@ -17,4 +17,8 @@
   grid-gap: 1em;
   align-items: center;
   justify-items: center;
+}
+
+.example-container .mat-form-field + .mat-form-field {
+  margin-left: 8px;
 }
