--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<!-- <mat-sidenav-container>
-    <mat-sidenav #sidenav mode="navigation">
+<mat-sidenav-container>
+    <mat-sidenav #sidenav mode="navigation" class="side-nav-light">
         <app-sidenav-list (sidenavClose)="sidenav.close()"></app-sidenav-list>
     </mat-sidenav>
     <mat-sidenav-content>
@@ -8,8 +8,7 @@
             <router-outlet></router-outlet>
         </main> 
     </mat-sidenav-content>
-</mat-sidenav-container> -->
-
-<app-header></app-header>
-<router-outlet></router-outlet>
+</mat-sidenav-container>
+<!-- <app-header></app-header>
+<router-outlet></router-outlet> -->
 <app-footer></app-footer>
