--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -43,7 +43,7 @@
 
 
   <div class="form-element">
-    <button mat-raised-button color="primary" type="submit" class="button"[disabled]="!formGroup.valid" (click)="registerSubmit()">Register</button>
+    <button mat-raised-button type="submit" class="button"[disabled]="!formGroup.valid" (click)="registerSubmit()">Register</button>
   </div>
 </div>
 </div>
