--- a/src/app/sidenav-list/sidenav-list.component.html
+++ b/src/app/sidenav-list/sidenav-list.component.html
@@ -5,4 +5,7 @@
     <a mat-list-item routerLink="/dashboard" (click)="onSidenavClose()">
         <mat-icon>dashboard</mat-icon><span class="nav-caption">Dashboard</span>
     </a>
+    <a mat-list-item routerLink="/subscription" (click)="onSidenavClose()">
+        <mat-icon>notifications</mat-icon><span class="nav-caption">Subscribe</span>
+    </a>
 </mat-nav-list>
