--- a/src/styles.css
+++ b/src/styles.css
@@ -5,7 +5,8 @@ html, body { height: 100%; margin:0 }
  body {
    margin: 0;
    font-family: Roboto, "Helvetica Neue", sans-serif;
-   background-color: #fff;
+   background-color:white;
+   overflow: hidden;
  }
 
  
