--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -4,13 +4,22 @@
     margin: 0;
 }
 
+.mat-toolbar {
+    background: #2e4055;
+    color: #fff;
+  }
+  
 mat-toolbar{
-    position: -webkit-sticky;
+    /* position: sticky;
     height: 50px;
     bottom: 0px;
     left: 0px;
     right: 0px;
-    margin-bottom: 0px;
+    margin-bottom: 0px; */
+   min-width: 100%;
+   height: 50px;
+   bottom:0;
+   position: fixed;
 }
 
 a {
