--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -6,7 +6,10 @@ a {
 a:hover, a:active{
     color: lightgray;
 }
-
+.mat-toolbar {
+    background: #2e4055;
+    color: #fff;
+  }
 .navigation-items{
     list-style-type: none;
     padding: 0;
@@ -14,6 +17,7 @@ a:hover, a:active{
 }
 
 mat-toolbar{
+    position: static;
     border-radius: 3px;
 }
 
