--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,22 +1,24 @@
-<mat-toolbar color="primary">
-    <!-- <div>
+<mat-toolbar>
+    <div>
         <button mat-icon-button (click)="onToggleSideNav()">
             <mat-icon>menu</mat-icon>
         </button>
-    </div> -->
+    </div>
     <div>
         <a routerLink="/home">Air Watch</a>
     </div> 
     <div fxFlex fxLayout fxLayoutAlign="end">
         <ul fxLayout fxLayoutGap="15px" class="navigation-items">
             <li *ngIf='!authService.isloggedin'>
-                <a routerLink="/register">Register</a>
+                <a routerLink="/register">Sign Up</a>
             </li>
             <li *ngIf='!authService.isloggedin'>
-                <a (click)="loggingOut()">Login</a>
+                <a routerLink="/login">Sign In</a>
             </li>
             <li *ngIf='authService.isloggedin'>
-                <a>LogOut</a>
+                <a (click)="loggingOut()">
+                    <mat-icon>logout</mat-icon>
+                </a>
             </li>
         </ul>         
     </div>
