--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -39,8 +39,8 @@
         <button mat-raised-button color="primary" type="submit" class="button"(click)="loginSubmit()">Login</button>
       </div>
 
-      <div style="text-align:center">
+      <!-- <div style="text-align:center">
         <label class="error-message">{{ submitMessage }}</label>
-      </div>
+      </div> -->
     </div>
     </div>
