--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<mat-sidenav-container>
+<!-- <mat-sidenav-container>
     <mat-sidenav #sidenav mode="navigation" class="side-nav-light">
         <app-sidenav-list (sidenavClose)="sidenav.close()"></app-sidenav-list>
     </mat-sidenav>
@@ -7,8 +7,9 @@
         <main>
             <router-outlet></router-outlet>
         </main> 
+        <app-footer></app-footer>
     </mat-sidenav-content>
-</mat-sidenav-container>
-<!-- <app-header></app-header>
-<router-outlet></router-outlet> -->
+</mat-sidenav-container> -->
+<app-header></app-header>
+<router-outlet></router-outlet>
 <app-footer></app-footer>
