--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -39,7 +39,7 @@
         </div>
     </div>
 </div> -->
-
+<app-header></app-header>
 <div class="grid-container">
   <mat-card class="search-card">
     <mat-card-header>
@@ -114,3 +114,4 @@
     </mat-card-actions>
   </mat-card>
 </div>
+<app-footer></app-footer>
