--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -24,7 +24,7 @@
   <div style="text-align:center">
     <label class="error-message">{{ submitMessage }}</label>
   </div> -->
-  
+  <app-header></app-header>
   <div [formGroup]="formGroup">
     <div class="container">
       <mat-form-field class="form-element">
@@ -44,3 +44,4 @@
       </div> -->
     </div>
     </div>
+  <app-footer></app-footer>
