--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,6 @@
         <app-footer></app-footer>
     </mat-sidenav-content>
 </mat-sidenav-container> -->
-<app-header></app-header>
+<!-- <app-header></app-header> -->
 <router-outlet></router-outlet>
-<app-footer></app-footer>
+<!-- <app-footer></app-footer> -->
