--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -1,1 +1,28 @@
+a {
+    text-decoration: none;
+    color: white;
+}
 
+a:hover, a:active{
+    color: lightgray;
+}
+.mat-toolbar {
+    background: #2e4055;
+    color: #fff;
+  }
+.navigation-items{
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+mat-toolbar{
+    position: static;
+    border-radius: 3px;
+}
+
+@media(max-width: 959px){
+    mat-toolbar{
+        border-radius: 0px;
+    }
+}
