--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -24,7 +24,7 @@
     </div>
 </mat-toolbar>
 <app-search></app-search>
-<mat-toolbar color="primary">
+<mat-toolbar>
     <div fxFlex fxLayout fxLayoutAlign="center">
         <ul fxLayout fxLayoutGap="15px" class="navigation-items">
             <li>
@@ -33,4 +33,3 @@
         </ul>         
     </div>
 </mat-toolbar>
-
