Working without adding headers

--- a/src/app/aqicard/aqicard.component.html
+++ b/src/app/aqicard/aqicard.component.html
@@ -15,4 +15,7 @@
       </mat-list-item> 
     </mat-list>
   </mat-card-content>
+  <mat-card-actions>
+    <button mat-button (click)="addFav()">Add to Favourites</button>
+  </mat-card-actions>
 </mat-card>
