--- a/src/app/favourites/favourites.component.html
+++ b/src/app/favourites/favourites.component.html
@@ -1,3 +1,13 @@
+<div fxFlex fxLayout fxLayoutAlign="end">
+  <ul fxLayout fxLayoutGap="15px" class="navigation-items">
+      <li>
+          <a routerLink="/favourites">Favourites</a>
+      </li>
+      <li>
+          <a routerLink="/subscription">Subscribe</a>
+      </li>
+  </ul>         
+</div>
 <div *ngIf="isFavouriteExists">
   <h2 [style.text-align]="center">Favourites</h2>
   <div class="grid-container">
