--- a/src/app/subscription/subscription.component.html
+++ b/src/app/subscription/subscription.component.html
@@ -1,3 +1,13 @@
+<div fxFlex fxLayout fxLayoutAlign="end">
+  <ul fxLayout fxLayoutGap="15px" class="navigation-items">
+      <li>
+          <a routerLink="/favourites">Favourites</a>
+      </li>
+      <li>
+          <a routerLink="/subscription">Subscribe</a>
+      </li>
+  </ul>         
+</div>
 <div class="grid-cont">
   <mat-card class="example-card">
     <mat-card-header>
