--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -10,7 +10,22 @@
    margin: 10% auto;
    width: 20vw;
 } */
+.mat-toolbar {
+  background: #2e4055;
+  color: #fff;
+  list-style-type: none;
+}
+ul{
+  list-style-type: none;
+}
+a {
+  text-decoration: none;
+  color: white;
+}
 
+a:hover, a:active{
+  color: lightgray;
+}
 .container{
   margin: auto;
   width: 50%;
