--- a/src/app/subscription/subscription.component.css
+++ b/src/app/subscription/subscription.component.css
@@ -24,3 +24,19 @@
 .mat-radio-button ~ .mat-radio-button {
   margin-left: 16px;
 }
+
+a {
+  text-decoration: none;
+  color: white;
+}
+
+a:hover, a:active{
+  color: lightgray;
+}
+.mat-toolbar {
+  background: #2e4055;
+  color: #fff;
+}
+ul{
+  list-style-type: none;
+}
