--- a/src/app/subscription/subscription.component.html
+++ b/src/app/subscription/subscription.component.html
@@ -1,13 +1,24 @@
-<div fxFlex fxLayout fxLayoutAlign="end">
-  <ul fxLayout fxLayoutGap="15px" class="navigation-items">
-      <li>
-          <a routerLink="/favourites">Favourites</a>
-      </li>
-      <li>
-          <a routerLink="/subscription">Subscribe</a>
-      </li>
-  </ul>         
-</div>
+<mat-toolbar>
+  <div>
+      <a routerLink="/home">
+          <mat-icon>home</mat-icon>
+      </a>
+      <br>
+      <a routerLink="/dashboard">
+          <mat-icon>dashboard</mat-icon>
+      </a>
+  </div>
+  <div fxFlex fxLayout fxLayoutAlign="start">Air Watch</div>
+  <div fxFlex fxLayout fxLayoutAlign="end">
+      <ul fxLayout fxLayoutGap="15px" class="navigation-items">
+          <li>
+            <a routerLink="/home">
+                  <mat-icon>logout</mat-icon>
+              </a>
+          </li>
+      </ul>         
+  </div>
+</mat-toolbar>
 <div class="grid-cont">
   <mat-card class="example-card">
     <mat-card-header>
@@ -34,3 +45,4 @@
     </mat-card-actions>
   </mat-card>
 </div>
+<app-footer></app-footer>
