--- a/src/app/favourites/favourites.component.css
+++ b/src/app/favourites/favourites.component.css
@@ -18,3 +18,19 @@
   position: absolute;
   right: 20px;
 }
+.mat-toolbar {
+  background: #2e4055;
+  color: #fff;
+  list-style-type: none;
+}
+ul{
+  list-style-type: none;
+}
+a {
+  text-decoration: none;
+  color: white;
+}
+
+a:hover, a:active{
+  color: lightgray;
+}
