--- a/src/app/favourites/favourites.component.html
+++ b/src/app/favourites/favourites.component.html
@@ -1,13 +1,25 @@
-<div fxFlex fxLayout fxLayoutAlign="end">
-  <ul fxLayout fxLayoutGap="15px" class="navigation-items">
-      <li>
+<mat-toolbar>
+  <div>
+      <a routerLink="/home">
+          <mat-icon>home</mat-icon>
+      </a>
+      <br>
+      <a routerLink="/dashboard">
+          <mat-icon>dashboard</mat-icon>
+      </a>
+  </div>
+  <div fxFlex fxLayout fxLayoutAlign="start">Air Watch</div>
+  <div fxFlex fxLayout fxLayoutAlign="end">
+    <ul fxLayout fxLayoutGap="15px" class="navigation-items">
+        <li>
           <a routerLink="/favourites">Favourites</a>
-      </li>
-      <li>
+        </li>
+        <li>
           <a routerLink="/subscription">Subscribe</a>
-      </li>
-  </ul>         
+        </li>
+    </ul>         
 </div>
+  </mat-toolbar>
 <div *ngIf="isFavouriteExists">
   <h2 [style.text-align]="center">Favourites</h2>
   <div class="grid-container">
