--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -18,7 +18,7 @@
                 <a routerLink="/subscription">Subscribe</a>
             </li>
             <li >
-                <a href=# (click)="loggingOut()">
+                <a routerLink="/home">
                     <mat-icon>logout</mat-icon>
                 </a>
             </li>
