--- a/src/app/favourites/favourites.component.html
+++ b/src/app/favourites/favourites.component.html
@@ -12,11 +12,13 @@
   <div fxFlex fxLayout fxLayoutAlign="end">
     <ul fxLayout fxLayoutGap="15px" class="navigation-items">
         <li>
-          <a routerLink="/favourites">Favourites</a>
-        </li>
-        <li>
           <a routerLink="/subscription">Subscribe</a>
         </li>
+        <li >
+          <a routerLink="/home">
+              <mat-icon>logout</mat-icon>
+          </a>
+      </li>
     </ul>         
 </div>
   </mat-toolbar>
