--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -70,9 +70,9 @@
   height: 250px;
 } */
 
-.grid-container {
+/* .grid-container {
   background-image: url("../../assets/home-page-background.jpg");
-}
+} */
 
 .mat-card-title {
   padding-top: 10px;
