--- a/src/app/subscription/subscription.component.css
+++ b/src/app/subscription/subscription.component.css
@@ -24,3 +24,32 @@
 .mat-radio-button ~ .mat-radio-button {
   margin-left: 16px;
 }
+
+a {
+  text-decoration: none;
+  color: white;
+}
+
+a:hover, a:active{
+  color: lightgray;
+}
+.mat-toolbar {
+  background: #2e4055;
+  color: #fff;
+}
+.navigation-items{
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+mat-toolbar{
+  position: static;
+  border-radius: 3px;
+}
+
+@media(max-width: 959px){
+  mat-toolbar{
+      border-radius: 0px;
+  }
+}
