--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -90,7 +90,7 @@
   <mat-card class="aqi-card">
     <mat-card-header>
       <mat-card-title
-        >Air Quality in your nearest city {{ city }}</mat-card-title
+        >Air Quality {{ city }}</mat-card-title
       >
       <!-- <h2 class="warning">{{ status }}</h2> -->
     </mat-card-header>
