--- a/src/app/favourites/favourites.component.html
+++ b/src/app/favourites/favourites.component.html
@@ -27,10 +27,10 @@
   <div class="grid-container">
     <mat-card class="example-card" *ngFor="let fav of favs">
       <mat-card-header>
-        <mat-card-title>{{ fav.aqi }}</mat-card-title>
-        <mat-card-subtitle>{{ fav.city }}</mat-card-subtitle>
+        <mat-card-title>{{ fav['data'].current.pollution.aqius }}</mat-card-title>
+        <mat-card-subtitle>{{ fav['data'].city }}</mat-card-subtitle>
       </mat-card-header>
-      <mat-card-content>
+      <!-- <mat-card-content>
         <mat-list>
           <mat-divider></mat-divider>
           <mat-list-item>
@@ -65,7 +65,7 @@
             <span class="elem">{{ fav.pollutants.pm10 }} μg/m<sup>3</sup></span>
           </mat-list-item>
         </mat-list>
-      </mat-card-content>
+      </mat-card-content> -->
       <mat-card-actions>
         <button
           (click)="removeFromFavourites(fav)"
